added test projects, implemented proxy request

--- a/NetLoadBalancer/NetLoadBalancer.csproj
+++ b/NetLoadBalancer/NetLoadBalancer.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Folder Include="Code\Classes\" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="conf\ApacheModRewrite.config" />
+  </ItemGroup>
 </Project>
