--- a/NetLoadBalancer/conf/nlog.config
+++ b/NetLoadBalancer/conf/nlog.config
@@ -14,11 +14,11 @@
   <targets>
     <!-- write logs to file -->
     <target xsi:type="File" name="allfile" fileName="c:\temp\nlog-all-${shortdate}.log"
-                layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message} ${exception}" />
+                layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|${message}  ${exception:format=ToString,StackTrace}" />
 
     <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
     <target xsi:type="File" name="ownFile-web" fileName="c:\temp\nlog-own-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|  ${message} ${exception}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+            layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|  ${message} ${exception:format=ToString,StackTrace}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
     <!-- write to the void aka just remove -->
     <target xsi:type="Null" name="blackhole" />
