fixed settings for wiki

--- a/NetLoadBalancer/appsettings.json
+++ b/NetLoadBalancer/appsettings.json
@@ -1,15 +1,15 @@
 ﻿{
   "dependencies": {
     "NLog.Web.AspNetCore": "4.3.0",
-      "System.Net.Http": "4.0.1-*"
-    },
+    "System.Net.Http": "4.0.1-*"
+  },
 
-    "Logging": {
-      "IncludeScopes": false,
-      "LogLevel": {
-        "Default": "Warning"
-      }
-    },
+  "Logging": {
+    "IncludeScopes": false,
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
   "publishOptions": {
     "include": [
       "wwwroot",
@@ -20,7 +20,9 @@
     ]
   },
 
+  
+    "server.urls": "http://proxy.local:52231"
+  
 
 
-
- }
+}
